Add media font mixin and font query breakpoint
[Ticket: X]

--- a/sprint-one/index.html
+++ b/sprint-one/index.html
@@ -12,10 +12,10 @@
       <div class="navbar-logo" >
         <a href="#"><img src=".//assets/Logo/Logo-bandsite.svg" alt="logo" /></a>
       </div>
-        <ul class="navbar-list">
-          <li class="navbar-list__items"><a href="#">Biography</a></li>
-          <li class="navbar-list__items"><a href="#">Shows</a></li>
-        </div>
+      <ul class="navbar-list">
+        <li class="navbar-list__items"><a href="#">Biography</a></li>
+        <li class="navbar-list__items"><a href="#">Shows</a></li>
+      </div>
       </ul>
     </nav>
     <header class="hero">
@@ -52,15 +52,15 @@
       <section class="gallery-container">
         <article class="gallery">
           <h2 class="gallery__title">Photo Gallery</h2>
-          <div class="gallery__figure"><img class="gallery__figure--img" src="#" alt="Picture" /></div>
-          <div class="gallery__figure"><img class="gallery__figure--img" src="#" alt="Picture" /></div>
-          <div class="gallery__figure"><img class="gallery__figure--img" src="#" alt="Picture" /></div>
-          <div class="gallery__figure"><img class="gallery__figure--img" src="#" alt="Picture" /></div>
-          <div class="gallery__figure"><img class="gallery__figure--img" src="#" alt="Picture" /></div>
-          <div class="gallery__figure"><img class="gallery__figure--img" src="#" alt="Picture" /></div>
-          <div class="gallery__figure"><img class="gallery__figure--img" src="#" alt="Picture" /></div>
-          <div class="gallery__figure"><img class="gallery__figure--img" src="#" alt="Picture" /></div>
-          <div class="gallery__figure"><img class="gallery__figure--img" src="#" alt="Picture" /></div>
+          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-1.jpg" alt="Concert pictures" /></div>
+          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-2.jpg" alt="Concert pictures" /></div>
+          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-3.jpg" alt="Concert pictures" /></div>
+          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-4.jpg" alt="Concert pictures" /></div>
+          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-5.jpg" alt="Concert pictures" /></div>
+          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-6.jpg" alt="Concert pictures" /></div>
+          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-7.jpg" alt="Concert pictures" /></div>
+          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-8.jpg" alt="Concert pictures" /></div>
+          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-9.jpg" alt="Concert pictures" /></div>
         </article>
       </section>
     </main>
@@ -70,9 +70,9 @@
           <h2 class="footer__title">Get In Touch</h2>
           <div>
             <ul class="footer__list">
-              <li class="footer__link"><a href="#"></a><img src="#" alt="#" /></li>
-              <li class="footer__link"><a href="#"></a><img src="#" alt="#" /></li>
-              <li class="footer__link"><a href="#"></a><img src="#" alt="#" /></li>
+              <li class="footer__link"><a href="#"></a><img src="./assets/Icons/SVG/Icon-instagram.svg" alt="Instagram" /></li>
+              <li class="footer__link"><a href="#"></a><img src="./assets/Icons/PNG/Icon-facebook.png" alt="Facebook" /></li>
+              <li class="footer__link"><a href="#"></a><img src="./assets/Icons/SVG/Icon-twitter.svg" alt="Twitter" /></li>
               <li class="footer__link">
                 <a class="footer__link--hide" href="#">BANDSITE</a></li>
             </ul>
