Finish mobile view of the site
Multi-line description of commit,
feel free to be detailed.

[Ticket: X]

--- a/sprint-one/index.html
+++ b/sprint-one/index.html
@@ -13,7 +13,7 @@
         <a href="#"><img src=".//assets/Logo/Logo-bandsite.svg" alt="logo" /></a>
       </div>
       <ul class="navbar-list">
-        <li class="navbar-list__items"><a href="#">Biography</a></li>
+        <li class="navbar-list__items navbar-list__items--bar"><a id="biography" href="#">Biography</a></li>
         <li class="navbar-list__items"><a href="#">Shows</a></li>
       </div>
       </ul>
