--- a/sprint-one/index.html
+++ b/sprint-one/index.html
@@ -8,18 +8,22 @@
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
-    <nav class="navbar">
-      <div class="navbar-logo" >
-        <a href="#"><img src=".//assets/Logo/Logo-bandsite.svg" alt="logo" /></a>
-      </div>
-      <ul class="navbar-list">
-        <li class="navbar-list__items navbar-list__items--bar"><a id="biography" href="#">Biography</a></li>
-        <li class="navbar-list__items"><a href="#">Shows</a></li>
-      </div>
+    <nav class="navbar-container">
+      <ul class="navbar">
+        <li class="navbar__items--logo">
+          <a href="./index.html"><img src=".//assets/Logo/Logo-bandsite.svg" alt="logo" /></a>
+        </li>
+        <div class="navbar__links-cont">
+          <li class="navbar__items navbar__items--bar"><a id="biography" href="#">Biography</a></li>
+          <li class="navbar__items"><a href="#">Shows</a></li>
+        </div>
       </ul>
     </nav>
     <header class="hero">
-      <h1 class="hero__title">Gaspard Auge &<br> Xavier de Rosnay</h1>
+      <h1 class="hero__title">
+        Gaspard Auge &<br />
+        Xavier de Rosnay
+      </h1>
     </header>
     <main>
       <section class="about-container">
@@ -29,37 +33,45 @@
             <img class="about__figure--img" src="./assets/Images/band.jpg" alt="Musicians photo" />
           </figure>
           <blockquote class="about__quote">
-            "We are comfortable with not fighting what comes naturally. Before we might have thought, 'We need to be smarter than this'
+            "We are more comfortable with not fighting what comes naturally. Before we might have thought, 'We need to be smarter than this'"
           </blockquote>
           <p class="about__quote--author">- Xavier de Rosnay</p>
         </article>
         <article class="about-band">
           <h3 class="about-band__title">Xavier de Rosany & Gaspard Aug&eacute;</h3>
-          <p class="about-band__text">
-            Xavier De Ronsay and Gaspard Augé had a few mutual friends, who happened to run a record label, seeking tracks for a compilation. With an
-            immediate connection, the pair decided to try their hand at making a song. That’s when they created their breakout single, We Are Your
-            Friends – a feel-good, funk-filled, instant anthem that lost the remix contest, but won the attention of Pedro Winter, director of the
-            newly founded Ed Banger Records, who boasted Daft Punk as former clients. One week later, they were in his office, signing a record deal.
-          </p>
-          <p class="about-band__text">
-            Xavier De Ronsay and Gaspard Augé had a few mutual friends, who happened to run a record label, seeking tracks for a compilation. With an
-            immediate connection, the pair decided to try their hand at making a song. That’s when they created their breakout single, We Are Your
-            Friends – a feel-good, funk-filled, instant anthem that lost the remix contest, but won the attention of Pedro Winter, director of the
-            newly founded Ed Banger Records, who boasted Daft Punk as former clients. One week later, they were in his office, signing a record deal.
-          </p>
+          <div class="about-band__text">
+            <p class="about-band__text--between">
+              Xavier De Ronsay and Gaspard Augé had a few mutual friends, who happened to run a record label, seeking tracks for a compilation. With an
+              immediate connection, the pair decided to try their hand at making a song. That’s when they created their breakout single, We Are Your
+              Friends – a feel-good, funk-filled, instant anthem that lost the remix contest, but won the attention of Pedro Winter, director of the
+              newly founded Ed Banger Records, who boasted Daft Punk as former clients. One week later, they were in his office, signing a record deal.
+            </p>
+            <p>
+              Xavier De Ronsay and Gaspard Augé had a few mutual friends, who happened to run a record label, seeking tracks for a compilation. With an
+              immediate connection, the pair decided to try their hand at making a song. That’s when they created their breakout single, We Are Your
+              Friends – a feel-good, funk-filled, instant anthem that lost the remix contest, but won the attention of Pedro Winter, director of the
+              newly founded Ed Banger Records, who boasted Daft Punk as former clients. One week later, they were in his office, signing a record deal.
+            </p>
+        </div>
         </article>
       </section>
       <section class="gallery-container">
+        <h2 class="gallery-container__title">Photo Gallery</h2>
         <article class="gallery">
-          <h2 class="gallery__title">Photo Gallery</h2>
           <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-1.jpg" alt="Concert pictures" /></div>
-          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-2.jpg" alt="Concert pictures" /></div>
+          <div class="gallery__figure gallery__figure--margin-mid">
+            <img class="gallery__figure--img" src="./assets/Images/Photo-gallery-2.jpg" alt="Concert pictures" />
+          </div>
           <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-3.jpg" alt="Concert pictures" /></div>
           <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-4.jpg" alt="Concert pictures" /></div>
-          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-5.jpg" alt="Concert pictures" /></div>
+          <div class="gallery__figure gallery__figure--margin-mid">
+            <img class="gallery__figure--img" src="./assets/Images/Photo-gallery-5.jpg" alt="Concert pictures" />
+          </div>
           <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-6.jpg" alt="Concert pictures" /></div>
           <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-7.jpg" alt="Concert pictures" /></div>
-          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-8.jpg" alt="Concert pictures" /></div>
+          <div class="gallery__figure gallery__figure--margin-mid">
+            <img class="gallery__figure--img" src="./assets/Images/Photo-gallery-8.jpg" alt="Concert pictures" />
+          </div>
           <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-9.jpg" alt="Concert pictures" /></div>
         </article>
       </section>
@@ -68,14 +80,14 @@
       <section class="footer-container">
         <article class="footer">
           <h2 class="footer__title">Get In Touch</h2>
-          <div>
-            <ul class="footer__list">
-              <li class="footer__link"><a href="#"></a><img src="./assets/Icons/SVG/Icon-instagram.svg" alt="Instagram" /></li>
-              <li class="footer__link"><a href="#"></a><img src="./assets/Icons/PNG/Icon-facebook.png" alt="Facebook" /></li>
-              <li class="footer__link"><a href="#"></a><img src="./assets/Icons/SVG/Icon-twitter.svg" alt="Twitter" /></li>
-              <li class="footer__link">
-                <a class="footer__link--hide" href="#">BANDSITE</a></li>
-            </ul>
+          <ul class="footer__list">
+            <li class="footer__items"><a href="#"></a><img src="./assets/Icons/SVG/Icon-instagram.svg" alt="Instagram" /></li>
+            <li class="footer__items"><a href="#"></a><img src="./assets/Icons/PNG/Icon-facebook.png" alt="Facebook" /></li>
+            <li class="footer__items"><a href="#"></a><img src="./assets/Icons/SVG/Icon-twitter.svg" alt="Twitter" /></li>
+            <li class="footer__items footer__items--hide">
+              <a href="#"><img src=".//assets/Logo/Logo-bandsite.svg" alt="logo" /></a>
+            </li>
+          </ul>
           </div>
         </article>
         <article class="footer-info">
@@ -89,7 +101,7 @@
               info@thebeesknees.com
             </address>
           </div>
-          <div class="footer-members">
+          <div class="footer-members footer-members__margin-mid">
             <h4 class="footer-members__title">Marsha Vlasic</h4>
             <h4 class="footer-members__title">Artist Group International</h4>
             <address class="footer-members__address">
@@ -109,8 +121,8 @@
               RWL@wmeentertainment.com
             </address>
           </div>
-          <small class="footer-copyright"> 
-            Copyright The Bees Knees <span>&#169;</span> 2018 <br />
+          <small class="footer-copyright">
+            Copyright The Bees Knees <span>&#169;</span> 2018
             All Rights Reserved
           </small>
         </article>
