Improve code layout and convert px to rem.
[Ticket: X]

--- a/sprint-one/index.html
+++ b/sprint-one/index.html
@@ -98,7 +98,7 @@
               460 King Street West<br />
               Toronto, Ontario M5V 1L7<br />
               <br />
-              info@thebeesknees.com
+              <a href = "mailto: info@thebeesknees.com">info@thebeesknees.com</a>
             </address>
           </div>
           <div class="footer-members footer-members__margin-mid">
@@ -108,7 +108,7 @@
               Booking Agent for<br />
               US/South America/Japan<br />
               <br />
-              marsha.vlasic@artistgrp.com
+              <a href = "mailto: marsha.vlasic@artistgrp.com">marsha.vlasic@artistgrp.com</a>
             </address>
           </div>
           <div class="footer-members">
@@ -118,7 +118,7 @@
               Booking Agent for<br />
               UK/ EU/ AU<br />
               <br />
-              RWL@wmeentertainment.com
+              <a href = "mailto: RWL@wmeentertainment.com">RWL@wmeentertainment.com</a>
             </address>
           </div>
           <small class="footer-copyright">
