Restructure tags layout to follow proper syntax.
[Ticket: X]

--- a/sprint-one/index.html
+++ b/sprint-one/index.html
@@ -9,15 +9,15 @@
   </head>
   <body>
     <nav class="navbar-container">
-      <ul class="navbar">
-        <li class="navbar__items--logo">
+      <div class="navbar">
+        <div class="navbar__items--logo">
           <a href="./index.html"><img src=".//assets/Logo/Logo-bandsite.svg" alt="logo" /></a>
-        </li>
-        <div class="navbar__links-cont">
+        </div>
+        <ul class="navbar__links-cont">
           <li class="navbar__items navbar__items--bar"><a id="biography" href="#">Biography</a></li>
           <li class="navbar__items"><a href="#">Shows</a></li>
-        </div>
-      </ul>
+        </ul>
+      </div>
     </nav>
     <header class="hero">
       <h1 class="hero__title">
@@ -41,18 +41,20 @@
           <h3 class="about-band__title">Xavier de Rosany & Gaspard Aug&eacute;</h3>
           <div class="about-band__text">
             <p class="about-band__text--between">
-              Xavier De Ronsay and Gaspard Augé had a few mutual friends, who happened to run a record label, seeking tracks for a compilation. With an
-              immediate connection, the pair decided to try their hand at making a song. That’s when they created their breakout single, We Are Your
-              Friends – a feel-good, funk-filled, instant anthem that lost the remix contest, but won the attention of Pedro Winter, director of the
-              newly founded Ed Banger Records, who boasted Daft Punk as former clients. One week later, they were in his office, signing a record deal.
+              Xavier De Ronsay and Gaspard Augé had a few mutual friends, who happened to run a record label, seeking tracks for a compilation. With
+              an immediate connection, the pair decided to try their hand at making a song. That’s when they created their breakout single, We Are
+              Your Friends – a feel-good, funk-filled, instant anthem that lost the remix contest, but won the attention of Pedro Winter, director of
+              the newly founded Ed Banger Records, who boasted Daft Punk as former clients. One week later, they were in his office, signing a record
+              deal.
             </p>
             <p>
-              Xavier De Ronsay and Gaspard Augé had a few mutual friends, who happened to run a record label, seeking tracks for a compilation. With an
-              immediate connection, the pair decided to try their hand at making a song. That’s when they created their breakout single, We Are Your
-              Friends – a feel-good, funk-filled, instant anthem that lost the remix contest, but won the attention of Pedro Winter, director of the
-              newly founded Ed Banger Records, who boasted Daft Punk as former clients. One week later, they were in his office, signing a record deal.
+              Xavier De Ronsay and Gaspard Augé had a few mutual friends, who happened to run a record label, seeking tracks for a compilation. With
+              an immediate connection, the pair decided to try their hand at making a song. That’s when they created their breakout single, We Are
+              Your Friends – a feel-good, funk-filled, instant anthem that lost the remix contest, but won the attention of Pedro Winter, director of
+              the newly founded Ed Banger Records, who boasted Daft Punk as former clients. One week later, they were in his office, signing a record
+              deal.
             </p>
-        </div>
+          </div>
         </article>
       </section>
       <section class="gallery-container">
@@ -88,7 +90,6 @@
               <a href="#"><img src=".//assets/Logo/Logo-bandsite.svg" alt="logo" /></a>
             </li>
           </ul>
-          </div>
         </article>
         <article class="footer-info">
           <div class="footer-members">
@@ -98,7 +99,7 @@
               460 King Street West<br />
               Toronto, Ontario M5V 1L7<br />
               <br />
-              <a href = "mailto: info@thebeesknees.com">info@thebeesknees.com</a>
+              <a href="mailto:info@thebeesknees.com">info@thebeesknees.com</a>
             </address>
           </div>
           <div class="footer-members footer-members__margin-mid">
@@ -108,7 +109,7 @@
               Booking Agent for<br />
               US/South America/Japan<br />
               <br />
-              <a href = "mailto: marsha.vlasic@artistgrp.com">marsha.vlasic@artistgrp.com</a>
+              <a href="mailto:marsha.vlasic@artistgrp.com">marsha.vlasic@artistgrp.com</a>
             </address>
           </div>
           <div class="footer-members">
@@ -118,13 +119,10 @@
               Booking Agent for<br />
               UK/ EU/ AU<br />
               <br />
-              <a href = "mailto: RWL@wmeentertainment.com">RWL@wmeentertainment.com</a>
+              <a href="mailto:RWL@wmeentertainment.com">RWL@wmeentertainment.com</a>
             </address>
           </div>
-          <small class="footer-copyright">
-            Copyright The Bees Knees <span>&#169;</span> 2018
-            All Rights Reserved
-          </small>
+          <small class="footer-copyright"> Copyright The Bees Knees <span>&#169;</span> 2018 All Rights Reserved </small>
         </article>
       </section>
     </footer>
