Add visual effects to mail to links
[Ticket: X]

--- a/sprint-one/index.html
+++ b/sprint-one/index.html
@@ -99,7 +99,7 @@
               460 King Street West<br />
               Toronto, Ontario M5V 1L7<br />
               <br />
-              <a href="mailto:info@thebeesknees.com">info@thebeesknees.com</a>
+              <a class="footer-members__address--email" href="mailto:info@thebeesknees.com">info@thebeesknees.com</a>
             </address>
           </div>
           <div class="footer-members footer-members__margin-mid">
@@ -109,7 +109,7 @@
               Booking Agent for<br />
               US/South America/Japan<br />
               <br />
-              <a href="mailto:marsha.vlasic@artistgrp.com">marsha.vlasic@artistgrp.com</a>
+              <a class="footer-members__address--email" href="mailto:marsha.vlasic@artistgrp.com">marsha.vlasic@artistgrp.com</a>
             </address>
           </div>
           <div class="footer-members">
@@ -119,7 +119,7 @@
               Booking Agent for<br />
               UK/ EU/ AU<br />
               <br />
-              <a href="mailto:RWL@wmeentertainment.com">RWL@wmeentertainment.com</a>
+              <a class="footer-members__address--email" href="mailto:RWL@wmeentertainment.com">RWL@wmeentertainment.com</a>
             </address>
           </div>
           <small class="footer-copyright"> Copyright The Bees Knees <span>&#169;</span> 2018 All Rights Reserved </small>
