Refactored comment section
[Ticket: X]

--- a/sprint-two/index.html
+++ b/sprint-two/index.html
@@ -139,6 +139,6 @@
         </article>
       </section>
     </footer>
-    <script src="/scripts/index-page.js"></script>
+    <script src="scripts/index-page.js"></script>
   </body>
 </html>
