--- a/sprint-two/pages/shows.html
+++ b/sprint-two/pages/shows.html
@@ -20,9 +20,11 @@
       </div>
     </nav>
     <header class="hero">
+      <h3 class="hero__subtittle">Woman Worldwide Album</h3>
       <h1 class="hero__title">
-        Gaspard Auge &<br />
-        Xavier de Rosnay
+        Waters of Nazareth<br />
+        x We Are your<br />
+        Friends x Phantom
       </h1>
     </header>
     <main>
@@ -37,11 +39,11 @@
             </tr>
           </thead>
           <tbody class="table__body">
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+            <tr class="table__row">
+              <td data-th="DATES" class="table__row--data"></td>
+              <td data-th="VENUE" class="table__row--data"></td>
+              <td data-th="LOCATION" class="table__row--data"></td>
+              <td class="table__row--button"><button></button></td>
             </tr>
           </tbody>
         </table>
@@ -95,6 +97,6 @@
         </article>
       </section>
     </footer>
-    <script src="scripts/index-page.js"></script>
+    <script src="../scripts/build-shows-page.js"></script>
   </body>
 </html>
