Finish shows page table in all devices
[Ticket: X]

--- a/sprint-two/index.html
+++ b/sprint-two/index.html
@@ -14,8 +14,8 @@
           <a href="./index.html"><img src=".//assets/Logo/Logo-bandsite.svg" alt="logo" /></a>
         </div>
         <ul class="navbar__links-cont">
-          <li class="navbar__items navbar__items--bar"><a id="biography" href="#">Biography</a></li>
-          <li class="navbar__items"><a href="#">Shows</a></li>
+          <li class="navbar__items navbar__items--bar"><a id="biography" href="./index.html">Biography</a></li>
+          <li class="navbar__items"><a id="shows" href="./pages/shows.html">Shows</a></li>
         </ul>
       </div>
     </nav>
