--- a/sprint-two/pages/shows.html
+++ b/sprint-two/pages/shows.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Roberto Manzano Show Site</title>
     <link rel="stylesheet" href="../styles/shows.css" />
   </head>
   <body>
@@ -14,12 +14,12 @@
           <a href="./index.html"><img src="..//assets/Logo/Logo-bandsite.svg" alt="logo" /></a>
         </div>
         <ul class="navbar__links-cont">
-          <li class="navbar__items navbar__items--bar"><a id="biography" href="#">Biography</a></li>
-          <li class="navbar__items"><a href="#">Shows</a></li>
+          <li class="navbar__items"><a id="biography" href="../index.html">Biography</a></li>
+          <li class="navbar__items navbar__items--bar"><a id="shows" href="../pages/shows.html">Shows</a></li>
         </ul>
       </div>
     </nav>
-    <header class="hero">
+    <!-- <header class="hero">
       <h3 class="hero__subtittle">Woman Worldwide Album</h3>
       <div>
         <h1 class="hero__title">
@@ -30,10 +30,10 @@
         <figure class="hero__player-cont">
           <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/948087565&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/soundcloud-shine" title="Shine: Pop" target="_blank" style="color: #cccccc; text-decoration: none;">Shine: Pop</a> · <a href="https://soundcloud.com/soundcloud-shine/sets/accelerate-future-pop" title="Future-Pop: Accelerate" target="_blank" style="color: #cccccc; text-decoration: none;">Future-Pop: Accelerate</a></div>
         </figure>
-    </header>
+    </header> -->
     <main>
       <section class="shows-container">
-        <h1 class="show-container__title">SHOWS</h1>
+        <h1 class="shows-container__title">SHOWS</h1>
         <table class="table">
           <thead class="table__head">
             <tr class="table__row">
@@ -47,7 +47,7 @@
               <td data-th="DATES" class="table__row--data"></td>
               <td data-th="VENUE" class="table__row--data"></td>
               <td data-th="LOCATION" class="table__row--data"></td>
-              <td class="table__row--button"><button></button></td>
+              <td class="table__row--data"><button class="table__row--button"></button></td>
             </tr>
           </tbody>
         </table>
