Set layout to insert music player
[Ticket: X]

--- a/sprint-two/pages/shows.html
+++ b/sprint-two/pages/shows.html
@@ -19,7 +19,7 @@
         </ul>
       </div>
     </nav>
-    <!-- <header class="hero">
+    <header class="hero">
       <h3 class="hero__subtittle">Woman Worldwide Album</h3>
       <div>
         <h1 class="hero__title">
@@ -28,9 +28,8 @@
           Friends x Phantom
         </h1>
         <figure class="hero__player-cont">
-          <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/948087565&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/soundcloud-shine" title="Shine: Pop" target="_blank" style="color: #cccccc; text-decoration: none;">Shine: Pop</a> · <a href="https://soundcloud.com/soundcloud-shine/sets/accelerate-future-pop" title="Future-Pop: Accelerate" target="_blank" style="color: #cccccc; text-decoration: none;">Future-Pop: Accelerate</a></div>
         </figure>
-    </header> -->
+    </header>
     <main>
       <section class="shows-container">
         <h1 class="shows-container__title">SHOWS</h1>
