Finish media layout on all devices
[Ticket: X]

--- a/sprint-two/pages/shows.html
+++ b/sprint-two/pages/shows.html
@@ -20,15 +20,23 @@
       </div>
     </nav>
     <header class="hero">
-      <h3 class="hero__subtittle">Woman Worldwide Album</h3>
-      <div>
+      <section class="hero__text-cont">
+        <h3 class="hero__subtitle">Woman Worldwide Album</h3>
         <h1 class="hero__title">
           Waters of Nazareth<br />
           x We Are your<br />
           Friends x Phantom
         </h1>
-        <figure class="hero__player-cont">
-        </figure>
+      </section>
+      <figure class="hero__player-cont">
+        <!-- <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/375070550&color=ff5500"></iframe>        -->
+        <iframe
+          class="hero__player-cont--iframe"
+          frameborder="no"
+          allow="autoplay"
+          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/11477439&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"
+        ></iframe>
+      </figure>
     </header>
     <main>
       <section class="shows-container">
