Final steps,  fix minor layout discrepancies
[Ticket: X]

--- a/sprint-two/index.html
+++ b/sprint-two/index.html
@@ -85,7 +85,7 @@
           </figure>
           <div class="conversation-form__form-container">
             <label class="conversation-form__name-label" for="name">NAME</label>
-            <input class="conversation-form__name" type=text" id="name" name="name" placeholder="Name"/>
+            <input class="conversation-form__name" type=text" required id="name" name="name" placeholder="Name"/>
             <label class="conversation-form__label-textarea" for="comment">COMMENT</label>
             <textarea
               class="conversation-form__textarea"
@@ -95,6 +95,7 @@
               cols="30"
               rows="10"
               placeholder="Add a new comment"
+              required
             ></textarea>
             <button class="conversation-form__button">COMMENT</button>
           </div>
