--- a/sprint-two/pages/shows.html
+++ b/sprint-two/pages/shows.html
@@ -11,7 +11,7 @@
     <nav class="navbar-container">
       <div class="navbar">
         <div class="navbar__items--logo">
-          <a href="./index.html"><img src="..//assets/Logo/Logo-bandsite.svg" alt="logo" /></a>
+          <a href="../index.html"><img src="..//assets/Logo/Logo-bandsite.svg" alt="logo" /></a>
         </div>
         <ul class="navbar__links-cont">
           <li class="navbar__items"><a id="biography" href="../index.html">Biography</a></li>
