Fix HTML validation error
[Ticket: X]

--- a/sprint-two/index.html
+++ b/sprint-two/index.html
@@ -85,11 +85,10 @@
           </figure>
           <div class="conversation-form__form-container">
             <label class="conversation-form__name-label" for="name">NAME</label>
-            <input class="conversation-form__name" type=text" required id="name" name="name" placeholder="Name"/>
+            <input class="conversation-form__name" type="text" id="name" name="name" placeholder="Name" required />
             <label class="conversation-form__label-textarea" for="comment">COMMENT</label>
             <textarea
-              class="conversation-form__textarea"
-              class="conversation__form--textarea-input"
+              class="conversation-form__textarea conversation__form--textarea-input"
               name="comment"
               id="comment"
               cols="30"
