--- a/sprint-two/pages/shows.html
+++ b/sprint-two/pages/shows.html
@@ -32,7 +32,6 @@
         <!-- <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/375070550&color=ff5500"></iframe>        -->
         <iframe
           class="hero__player-cont--iframe"
-          frameborder="no"
           allow="autoplay"
           src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/11477439&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"
         ></iframe>
@@ -47,6 +46,7 @@
               <th class="table__row--header">DATES</th>
               <th class="table__row--header">VENUE</th>
               <th class="table__row--header">LOCATION</th>
+              <th class="table__row--header"></th>
             </tr>
           </thead>
           <tbody class="table__body">
