--- a/sprint-three/pages/shows.html
+++ b/sprint-three/pages/shows.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roberto Manzano Show Site</title>
     <link rel="stylesheet" href="../styles/shows.css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
   <body>
     <nav class="navbar-container">
@@ -30,11 +31,11 @@
       </section>
       <figure class="hero__player-cont">
         <!-- <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/375070550&color=ff5500"></iframe>        -->
-        <iframe
+        <!-- <iframe
           class="hero__player-cont--iframe"
           allow="autoplay"
           src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/11477439&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"
-        ></iframe>
+        ></iframe> -->
       </figure>
     </header>
     <main>
