Enable music player
[Ticket: X]

--- a/sprint-three/pages/shows.html
+++ b/sprint-three/pages/shows.html
@@ -30,12 +30,11 @@
         </h1>
       </section>
       <figure class="hero__player-cont">
-        <!-- <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/375070550&color=ff5500"></iframe>        -->
-        <!-- <iframe
+        <iframe
           class="hero__player-cont--iframe"
           allow="autoplay"
           src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/11477439&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"
-        ></iframe> -->
+        ></iframe>
       </figure>
     </header>
     <main>
