--- a/sprint-three/index.html
+++ b/sprint-three/index.html
@@ -7,6 +7,11 @@
     <title>Roberto Manzano Bandsite</title>
     <link rel="stylesheet" href="./styles/main.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/Faker/3.1.0/faker.min.js"
+      integrity="sha512-/seDHxVfh1NvFUscAj8GsHQVZJvr2jjAoYsNL7As2FCaFHUHYIarl3sRCvVlFgyouVNiRgHIebyLKjpgd1SLDw=="
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav class="navbar-container">
