--- a/sprint-three/pages/shows.html
+++ b/sprint-three/pages/shows.html
@@ -7,6 +7,7 @@
     <title>Roberto Manzano Show Site</title>
     <link rel="stylesheet" href="../styles/shows.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.25.1/moment.min.js"></script>
   </head>
   <body>
     <nav class="navbar-container">
