--- a/sprint-three/index.html
+++ b/sprint-three/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roberto Manzano Bandsite</title>
     <link rel="stylesheet" href="./styles/main.css" />
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.25.1/moment.min.js"></script>
   </head>
   <body>
     <nav class="navbar-container">
@@ -28,6 +26,7 @@
       </h1>
     </header>
     <main>
+      <button id="1">TryMet</button>
       <section class="about-container">
         <article class="about">
           <h2 class="about__title">About the Musicians</h2>
@@ -153,6 +152,9 @@
         </article>
       </section>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.25.1/moment.min.js"></script>
     <script src="scripts/index-page.js"></script>
   </body>
 </html>
