update navigation and gallery classes to improve readability

--- a/sprint-one/index.html
+++ b/sprint-one/index.html
@@ -8,16 +8,12 @@
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
-    <nav class="navbar-container">
-      <div class="navbar">
-        <div class="navbar__items--logo">
-          <a href="./index.html"><img src=".//assets/Logo/Logo-bandsite.svg" alt="logo" /></a>
-        </div>
-        <ul class="navbar__links-cont">
-          <li class="navbar__items navbar__items--bar"><a id="biography" href="#">Biography</a></li>
-          <li class="navbar__items"><a href="#">Shows</a></li>
-        </ul>
-      </div>
+    <nav class="navbar">
+      <a class="navbar__logo" href="./index.html"><img src=".//assets/Logo/Logo-bandsite.svg" alt="logo" /></a>
+      <ul class="navbar__lists">
+        <li class="navbar__list navbar__list--active"><a class="navbar__link" id="biography" href="#">Biography</a></li>
+        <li class="navbar__list"><a class="navbar__link" href="#">Shows</a></li>
+      </ul>
     </nav>
     <header class="hero">
       <h1 class="hero__title">
@@ -60,21 +56,33 @@
       <section class="gallery-container">
         <h2 class="gallery-container__title">Photo Gallery</h2>
         <article class="gallery">
-          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-1.jpg" alt="Concert pictures" /></div>
-          <div class="gallery__figure gallery__figure--margin-mid">
+          <div class="gallery__figure">
+            <img class="gallery__figure--img" src="./assets/Images/Photo-gallery-1.jpg" alt="Concert pictures" />
+          </div>
+          <div class="gallery__figure">
             <img class="gallery__figure--img" src="./assets/Images/Photo-gallery-2.jpg" alt="Concert pictures" />
           </div>
-          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-3.jpg" alt="Concert pictures" /></div>
-          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-4.jpg" alt="Concert pictures" /></div>
-          <div class="gallery__figure gallery__figure--margin-mid">
+          <div class="gallery__figure">
+            <img class="gallery__figure--img" src="./assets/Images/Photo-gallery-3.jpg" alt="Concert pictures" />
+          </div>
+          <div class="gallery__figure">
+            <img class="gallery__figure--img" src="./assets/Images/Photo-gallery-4.jpg" alt="Concert pictures" />
+          </div>
+          <div class="gallery__figure">
             <img class="gallery__figure--img" src="./assets/Images/Photo-gallery-5.jpg" alt="Concert pictures" />
           </div>
-          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-6.jpg" alt="Concert pictures" /></div>
-          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-7.jpg" alt="Concert pictures" /></div>
-          <div class="gallery__figure gallery__figure--margin-mid">
+          <div class="gallery__figure">
+            <img class="gallery__figure--img" src="./assets/Images/Photo-gallery-6.jpg" alt="Concert pictures" />
+          </div>
+          <div class="gallery__figure">
+            <img class="gallery__figure--img" src="./assets/Images/Photo-gallery-7.jpg" alt="Concert pictures" />
+          </div>
+          <div class="gallery__figure">
             <img class="gallery__figure--img" src="./assets/Images/Photo-gallery-8.jpg" alt="Concert pictures" />
           </div>
-          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-9.jpg" alt="Concert pictures" /></div>
+          <div class="gallery__figure">
+            <img class="gallery__figure--img" src="./assets/Images/Photo-gallery-9.jpg" alt="Concert pictures" />
+          </div>
         </article>
       </section>
     </main>
