--- a/sprint-three/index.html
+++ b/sprint-three/index.html
@@ -26,7 +26,6 @@
       </h1>
     </header>
     <main>
-      <button id="1">TryMet</button>
       <section class="about-container">
         <article class="about">
           <h2 class="about__title">About the Musicians</h2>
@@ -61,21 +60,33 @@
       <section class="gallery-container">
         <h2 class="gallery-container__title">Photo Gallery</h2>
         <article class="gallery">
-          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-1.jpg" alt="Concert pictures" /></div>
+          <div class="gallery__figure">
+            <img class="gallery__figure--img" src="./assets/Images/Photo-gallery-1.jpg" alt="Concert pictures" />
+          </div>
           <div class="gallery__figure gallery__figure--margin-mid">
             <img class="gallery__figure--img" src="./assets/Images/Photo-gallery-2.jpg" alt="Concert pictures" />
           </div>
-          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-3.jpg" alt="Concert pictures" /></div>
-          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-4.jpg" alt="Concert pictures" /></div>
+          <div class="gallery__figure">
+            <img class="gallery__figure--img" src="./assets/Images/Photo-gallery-3.jpg" alt="Concert pictures" />
+          </div>
+          <div class="gallery__figure">
+            <img class="gallery__figure--img" src="./assets/Images/Photo-gallery-4.jpg" alt="Concert pictures" />
+          </div>
           <div class="gallery__figure gallery__figure--margin-mid">
             <img class="gallery__figure--img" src="./assets/Images/Photo-gallery-5.jpg" alt="Concert pictures" />
           </div>
-          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-6.jpg" alt="Concert pictures" /></div>
-          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-7.jpg" alt="Concert pictures" /></div>
+          <div class="gallery__figure">
+            <img class="gallery__figure--img" src="./assets/Images/Photo-gallery-6.jpg" alt="Concert pictures" />
+          </div>
+          <div class="gallery__figure">
+            <img class="gallery__figure--img" src="./assets/Images/Photo-gallery-7.jpg" alt="Concert pictures" />
+          </div>
           <div class="gallery__figure gallery__figure--margin-mid">
             <img class="gallery__figure--img" src="./assets/Images/Photo-gallery-8.jpg" alt="Concert pictures" />
           </div>
-          <div class="gallery__figure"><img class="gallery__figure--img" src="./assets/Images/Photo-gallery-9.jpg" alt="Concert pictures" /></div>
+          <div class="gallery__figure">
+            <img class="gallery__figure--img" src="./assets/Images/Photo-gallery-9.jpg" alt="Concert pictures" />
+          </div>
         </article>
       </section>
       <section class="conversation-container">
