improve about element naming convention
Improved the about block element BEM naming practices to improve
readability.

--- a/sprint-one/index.html
+++ b/sprint-one/index.html
@@ -26,7 +26,7 @@
         <article class="about">
           <h2 class="about__title">About the Musicians</h2>
           <figure class="about__figure">
-            <img class="about__figure--img" src="./assets/Images/band.jpg" alt="Musicians photo" />
+            <img class="about__img" src="./assets/Images/band.jpg" alt="Musicians photo" />
           </figure>
           <blockquote class="about__quote">
             "We are more comfortable with not fighting what comes naturally. Before we might have thought, 'We need to be smarter than this'"
